@@ -1,3 +1,13 @@
+nenolod     2005/11/02 18:50:19 UTC	(20051102-3397)
+  Log:
+  Crypto API support for register commands.
+  
+
+  Changes:	Modified:
+  +13 -1	trunk/modules/nickserv/register.c (File Modified) 
+  +10 -1	trunk/modules/userserv/register.c (File Modified) 
+
+
 nenolod     2005/11/02 18:32:36 UTC	(20051102-3395)
   Log:
   Add more crypto library routines.
